--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.pbxproj binary merge=union
 CJ-All-in-One/Pods/NMapsMap/framework/NMapsMap.xcframework/ios-arm64_armv7/NMapsMap.framework/Headers/NMFCompassView.h filter=lfs diff=lfs merge=lfs -text
 CJ-All-in-One/Pods/NMapsMap/framework/NMapsMap.xcframework/ios-arm64_armv7/NMapsMap.framework/Headers/NMFOfflineRegion.h filter=lfs diff=lfs merge=lfs -text
 CJ-All-in-One/Pods/NMapsMap/framework/NMapsMap.xcframework/ios-arm64_i386_x86_64-simulator filter=lfs diff=lfs merge=lfs -text
